Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10884

debugging on iOS device has a very slow startup

XMLWordPrintable

      When debugging on a device the debugger takes forever to startup (20-30s) and one is tempted to just interrupt it leading most likely to a crash.

      This is due to the fact that many dependent symbols are loaded from the device because we use the main SKD sysroot as sysroot, but the device has a slightly different sysroot, and thus many symbol files cannot be loaded locally.

      Xcode generates special sysroots by reading the symbols from the device just once when opening the organizer window with the device connected.
      These sysroots are stored in /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/DeviceSupport/ for the builtin ones and
      $HOME/Library/Developer/Xcode/iOS\ DeviceSupport/ for the user specific ones (after the xcode release).

      We should:
      1) detect the exact device SDK version and build number
      2) check if we find a good sysroot
      2.a) if no debug info was found prompt the user to go the organizer window of xcode (maybe via a task) and use the global sysroot

      Maybe we could let the user specify the sysroot to use, but I think that it might be simpler to simply tell the user where we expect it, and if he really wants it he can put it there.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fawzi Fawzi Mohamed
            fawzi Fawzi Mohamed
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes